@@ -18,7 +18,7 @@
  * along with this program; if not, write to the Free Software
  * Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA 02111-1307 USA
  *
- * $Id: blockmodel.h,v 1.25 2003/09/18 10:19:03 garbeam Exp $
+ * $Id: blockmodel.h,v 1.26 2003/09/19 15:16:22 vanto Exp $
  *
  *****************************************************************************/
 
@@ -157,6 +157,11 @@ signals:
      * Emitted when updatePerformed() was called.
      */
 //    virtual void updated();
+
+    /**
+     * Emitted when model gets deleted
+     */
+    void deleted();
 
 };
 
