@@ -18,7 +18,7 @@
  * along with this program; if not, write to the Free Software
  * Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA 02111-1307 USA
  *
- * $Id: blockview.h,v 1.28 2003/09/19 15:09:28 squig Exp $
+ * $Id: blockview.h,v 1.29 2003/09/19 15:16:22 vanto Exp $
  *
  *****************************************************************************/
 
@@ -134,6 +134,7 @@ public slots:
     void addPins(const PinVector &);
     void deletePinView(PinView *);
     void updateView();
+    void deleteView();
 
 protected:
 
