@@ -18,7 +18,7 @@
  * along with this program; if not, write to the Free Software
  * Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA 02111-1307 USA
  *
- * $Id: canvasview.h,v 1.24 2003/09/12 13:22:43 squig Exp $
+ * $Id: canvasview.h,v 1.25 2003/09/19 15:16:22 vanto Exp $
  *
  *****************************************************************************/
 
@@ -37,6 +37,7 @@ class PinView;
 #include <qcanvas.h>
 #include <qtooltip.h>
 class QCanvasItemList;
+class QCanvasItem;
 class QDragEnterEvent;
 class QDropEvent;
 class QMouseEvent;
@@ -104,7 +105,7 @@ signals:
      *
      * @param selected true, if at least one item is selected, false otherwise
      */
-    void selectionChanged(bool selected);
+    void selectionChanged(QCanvasItem *);
 
 protected:
 
